# Research

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  LICENSE  Makefile  README.md  README_TRAINING.md  pyproject.toml
.cursor/rules/: git.mdc  node.mdc  python-run.mdc  python-styleguide.mdc  resolve-issue.mdc  uv.mdc
.issues/: commit-msg-2.md  issue-2.md  issue-3.md  issue-4.md  issue-5.md
benchmark/: README.md  main.py  pyproject.toml
benchmark/benchmark/: __init__.py  base.py  blocks.py  lightning_benchmark.py  metrics.py  utils.py
benchmark/examples/: __init__.py  package_example.py  quick_benchmark.py  run_benchmark.py  visualize_results.py
benchmark/tests/: __init__.py  test_framework.py
docs/: chat-1.md  chat-2.md  deliverables-1.md  design-doc-1.md  design-doc-2.md  optional-1.md  ssm-implementations.md
docs/methods/: blade.md  dpassm.md
efficient_longctx/: __init__.py
efficient_longctx/blocks/: __init__.py  bigbird.py  blade.py  dpassm.py  longformer.py
efficient_longctx/evals/: __init__.py  synthetic.py
efficient_longctx/models/: README.md  __init__.py  data.py  models.py
efficient_longctx/training/: __init__.py  data.py  train.py
efficient_longctx/utils/: __init__.py  constants.py  gqa_kernels.py
examples/: README.md  dpassm_demo.py  lightning_cli_example.py  lightning_training_example.py  model_usage_example.py  models_quick_example.py  quick_example.py
scripts/: md2issue.py
tests/: __init__.py  test_baseline_blocks.py  test_blade.py  test_blade_flash_attn.py  test_cuda.py  test_dpassm.py  test_dpassm_ringbuf.py  test_dpassm_sdpa.py  test_flashattn_import.py  test_gqa.py  test_models.py  test_models_data.py  test_package.py  test_synthetic.py  test_training_data.py  test_training_train.py
